# flyaoc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent/: __init__.py  config.py  run_agent.py  run_pipeline.py  types.py
agent/agentic/: __init__.py  budget.py  hooks.py  parallel.py  prompts.py  runner.py  subagents.py  tracing.py
agent/cli/: __init__.py  __main__.py  args.py  benchmark.py  execution.py  main.py
agent/core/: __init__.py  corpus.py  metadata.py  ontology.py  papers.py  prompt_templates.py  validation.py
agent/mcp_servers/: __init__.py  literature_server.py  ontology_server.py  validation_server.py
agent/pipeline/: __init__.py  agent.py  nodes.py  prompts.py  state.py  tracing.py
agent/tools/: __init__.py  corpus_search.py  ontology_search.py  paper_reader.py  validator.py
data/: gene_to_pmcids_top100.json  genes_top100.csv  ground_truth_top100.jsonl  ground_truth_top100_hidden.jsonl  hidden_go_terms.json  top100_coverage_stats.json
eval/: README.md  __init__.py  data_loader.py  evaluator.py  recall_at_k.py  task1_go.py  task2_expression.py  task3_synonyms.py
notebooks/: data_curation_executed.ipynb
ontologies/: README.md  fly_development.obo
raw_data/: README.md  gene_to_pmcids.json  genes.csv
schemas/: OUTPUT_SPEC.md  agent_input_schema.json  agent_output_schema.json  validate.py
schemas/examples/: example_input_abd-A.json  example_output_abd-A.json
scripts/: __init__.py  analyze_scaling.py  compute_hidden_term_recall.py  deep_analysis.py  download_ontologies.py  generate_hidden_ground_truth.py  generate_scaling_tables.py  label_synonyms_in_corpus.py  run_scaling_experiment.py  setup.py
scripts/analyze_scaling/: __init__.py  __main__.py  cli.py  collection.py  config_metrics.py  extraction.py  io.py  plotting.py  (+1 more)
(+11 files in other folders)
